# CPP_Exercises

./: .clang-format  .gitignore  TP6.md  TP_SOLVED.md
large-files/: prepare_station.py
tp01/: TP1.md
tp01/ex1/: main.cpp
tp01/ex2/: main.cpp
tp02/: CMakeLists.txt  TP2.md
tp02/src/: Card.cpp  Card.hpp  Color.cpp  Color.hpp  Player.cpp  Player.hpp  Value.cpp  Value.hpp  main  main.cpp
tp03/: CMakeLists.txt  TP3-solutions.md  TP3.md
tp03/3-hrsoft/: CMakeLists.txt  HRSoftMain.cpp  HRSoftTests.cpp
tp03/3-hrsoft/HRSoft/: Department.hpp  Employee.hpp  HRSoftSystem.hpp
tp04/: CMakeLists.txt  TP4.md  TPNote.md
tp04/ex1/src/: qcm.hpp
tp04/ex2/src/: PhoneBook.hpp  PhoneBookEntry.hpp  PhoneNumber.hpp
tp04/ex2/tests/: 01-phone-number.cpp  02-is-valid.cpp  05-index-out.cpp
tp04/ex3/src/: 01-types.hpp  02-vector.hpp
tp05/: TP5.md
tp05/ex2/: Card.cpp  Player.cpp  Player.hpp  Tracker.hpp
tp05/ex3/: Link.cpp  Link.hpp  LinkedList.cpp  LinkedList.hpp  Person.cpp  Person.hpp  main.cpp
tp06/: CMakeLists.txt  TP6.md
tp06/1-recipes/: Material.hpp  MaterialHasher.hpp  ProgramData.cpp  ProgramData.hpp  Recipe.hpp  aliases.hpp  main.cpp  test.cpp
tp06/1-recipes/cmake/: scriptC.txt  scriptD.txt  scriptE.txt
tp06/1-recipes/lib/: Action.hpp  ActionManager.hpp  Actions.c  Actions.cpp  Scripts.cpp  Scripts.hpp
tp06/1-recipes/saves/: mat1.txt  prod.txt  rec.txt
tp06/1-recipes/scripts/: B.txt  E.txt
tp06/2-ptr/: CopyablePtr.hpp
tp07/: CMakeLists.txt  TP7.md
tp07/dungeon/: Character.hpp  Dungeon.cpp  Entity.hpp  Item.hpp  Logger.hpp  Potion.hpp  Trap.hpp
tp08/: CMakeLists.txt  TP8.md  TPNote.md
tp08/ex1/src/: qcm.hpp
tp08/ex2/src/: StringInstancePair.hpp  alias.hpp
tp08/ex3/src/: Base.hpp  DerivedInt.hpp  DerivedList.hpp  DerivedString.hpp
tp08/ex4/lib/: Tracker.hpp
tp08/ex4/src/: Collection.cpp  Collection.hpp  MultiMap.cpp  MultiMap.hpp
tp08/ex4/tests/: test40-collection.cpp  test41-multimap.cpp  test42-multimap-nocopy.cpp  test43-multimap-nocopy-warning.cpp  test44-multimap-ruleof5.cpp
tp09/: TP9.md
tp09/ex03/: main.cpp
tp09/ex04/: main.cpp
tp1/: Compte-rendu.md  TP1.md
tp1/ex1/: bonjour  hello  main2.cpp
tp1/ex2/: main2.cpp  value  values
tp1/ex3/: hello  utils.hpp
tp10/: TP10.md
tp10/src/: gray.cpp  grayscale.cpp  image.hpp  mandelbrot.cpp  pixels.hpp
tp11/: TP11.md
tp11/src/: factory.cpp  tostring.cpp
tp12/: TP12.md  TPNote.md
tp2/: Card.cpp  Card.hpp  Player.cpp  Player.hpp  TP2.md  card  game  main.cpp
tp5/: TP5.md
tp5/2-ptr/: main.cpp
